fix #14 allow scrolling on mobile navigation menu

--- a/src/sass/components/ui/MobileNavigation/_MobileNavigation.scss
+++ b/src/sass/components/ui/MobileNavigation/_MobileNavigation.scss
@@ -36,6 +36,7 @@
         z-index: 7;
         width: 100%;
         height: 100%;
+        overflow: auto;
 
         @media #{$tablet_breakpoint} {
             width: 350px;
